--- a/css/styles.css
+++ b/css/styles.css
@@ -1,191 +1,245 @@
-@import url('https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Hubballi&family=Merriweather:wght@300&family=Open+Sans:wght@300&family=Quicksand:wght@300&family=Raleway:ital,wght@1,300&display=swap');
-html {
-    font-size: 16px;
-}
+            @import url('https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Hubballi&family=Merriweather:wght@300&family=Open+Sans:wght@300&family=Quicksand:wght@300&family=Raleway:ital,wght@1,300&display=swap');
+            html {
+                font-size: 16px;
+            }
+            /* Redimensión de fuente utilizando rem */
+            
+            p {
+                font-size: 15px;
+                padding-left: 10%;
+            }
+            
+            h1 {
+                font-size: 30px;
+            }
+            
+            h2 {
+                font-size: 2rem;
+            }
+            
+            h3 {
+                font-size: 1.6rem;
+                padding-left: 5%;
+                text-align: center;
+            }
+            
+            h4 {
+                font-size: 1.3rem;
+                padding-left: 10%;
+            }
+            
+            h5 {
+                font-size: 1.15rem;
+            }
+            
+            h6 {
+                font-size: 1.05rem;
+            }
+            /**************************/
+            /* clases predefinidas */
+            
+            * {
+                box-sizing: border-box;
+                font-family: 'Quicksand', sans-serif;
+            }
+            
+            body {
+                margin: 0;
+                height: 100vh;
+                width: 100vw;
+                background-color: aliceblue;
+            }
+            /* Clear floats after the columns */
+            
+            .row:after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+            /* Diseño de columnas */
+            
+            .column-1 {
+                width: 100%;
+                height: 100%;
+            }
+            
+            .column-2 {
+                width: 50%;
+                float: left;
+            }
+            
+            .column-3 {
+                width: 33.33%;
+                float: left;
+            }
+            
+            .column-4 {
+                width: 25%;
+                float: left;
+            }
+            
+            .column-5 {
+                width: 20%;
+                float: left;
+            }
+            
+            .column-6 {
+                width: 16.66%;
+                float: left;
+            }
+            
+            .column-75 {
+                width: 75%;
+                float: left;
+            }
+            /* Otras clases */
+            
+            #header {
+                color: white;
+                background-image: url(../img/fondo.jpg);
+                height: 100vh;
+                background-position: center;
+                background-size: cover;
+            }
+            
+            #header1 {
+                color: white;
+                background-image: url(../img/fondo.jpg);
+                height: 100vh;
+                background-position: center;
+                background-size: cover;
+            }
+            
+            #encabezado {
+                height: 90vh;
+            }
+            
+            #encabezado {
+                height: 90vh;
+            }
+            
+            #idioma {
+                text-align: right;
+                text-decoration: none;
+                color: white;
+                background-color: black;
+                border-radius: 15%;
+                font-size: 30px;
+            }
+            
+            #idioma1 {
+                text-align: right;
+                text-decoration: none;
+                color: white;
+                background-color: black;
+                border-radius: 15%;
+                font-size: 30px;
+            }
+            
+            #descargar {
+                text-align: right;
+                text-decoration: none;
+                color: white;
+                background-color: black;
+                border-radius: 15%;
+                font-size: 30px;
+            }
+            
+            #descargar1 {
+                text-align: right;
+                text-decoration: none;
+                color: white;
+                background-color: black;
+                border-radius: 15%;
+                font-size: 30px;
+            }
+            
+            #estudios {
+                text-align: center;
+            }
+            
+            iframe {
+                padding-left: 10%;
+            }
+            
+            ul {
+                padding-left: 10%;
+                padding-right: 10%;
+            }
+            
+            #footer {
+                background-color: black;
+                color: gray;
+                text-align: center;
+                padding: 12px;
+            }
+            
+            #redes {
+                text-decoration: none;
+                color: white;
+            }
+            
+            #redes1 {
+                text-decoration: none;
+                color: white;
+            }
+            
+            #yo {
+                padding-left: 10%;
+                padding-right: 10%;
 
+            }
+            #yo1 {
+                padding-left: 10%;
+                padding-right: 10%;
 
-/* Redimensión de fuente utilizando rem */
-
-p {
-    font-size: 8px;
-    color: white;
-    text-align: center;
-}
-
-h1 {
-    font-size: 30px;
-    text-align: center;
-    color: white;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-h3 {
-    font-size: 1.6rem;
-}
-
-h4 {
-    font-size: 1.3rem;
-}
-
-h5 {
-    font-size: 1.15rem;
-}
-
-h6 {
-    font-size: 1.05rem;
-}
-
-
-/**************************/
-
-
-/* clases predefinidas */
-
-* {
-    box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
-}
-
-body {
-    margin: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: black;
-}
-
-
-/* Clear floats after the columns */
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-/* Diseño de columnas */
-
-.column-1 {
-    width: 100%;
-    height: 100%;
-}
-
-.column-2 {
-    width: 50%;
-    float: left;
-}
-
-.column-3 {
-    width: 33.33%;
-    float: left;
-}
-
-.column-4 {
-    width: 25%;
-    float: left;
-}
-
-.column-5 {
-    width: 20%;
-    float: left;
-}
-
-.column-6 {
-    width: 16.66%;
-    float: left;
-}
-
-.column-75 {
-    width: 75%;
-    float: left;
-}
-
-
-/* Otras clases */
-
-.color-submit {
-    background-color: orange;
-    border-radius: 7px;
-}
-
-.styles-div {
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 3%;
-}
-
-input,
-select {
-    width: 100%;
-    height: 30px;
-    margin: 5px;
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-.botones {
-    width: 48%;
-}
-
-#resultado {
-    text-align: center;
-    color: red;
-}
-
-#footer {
-    color: white;
-    text-align: center;
-    height: 10vh;
-}
-
-a {
-    color: white;
-}
-
-.binari {
-    background-color: rgba(172, 255, 47, 0.274);
-}
-
-#verde {
-    color: greenyellow;
-}
-
-#calculando {
-    font-size: 20px;
-}
-
-
-/* clase para centrar contenido en horizontal y vertical (lo centra respecto al elemento padre) */
-
-.flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 90vh;
-}
-
-@media only screen and (max-width: 600px) {
-    /* column-2 pasará de tener 50% a 100% */
-    .column-2 {
-        width: 100%;
-    }
-    /* column-3 pasará de tener 33.33% a 100% */
-    .column-3 {
-        width: 100%;
-    }
-    /* column-4 pasará de tener 25% a 50% */
-    .column-4 {
-        width: 50%;
-    }
-}
+            }
+            /* clase para centrar contenido en horizontal y vertical (lo centra respecto al elemento padre) */
+            
+            .flex {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 90vh;
+            }
+            
+            .flex1 {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 90vh;
+            }
+            
+            @media only screen and (max-width: 750px) {
+                /* column-2 pasará de tener 50% a 100% */
+                .column-2 {
+                    width: 100%;
+                    font-size: 20px;
+                }
+                /* column-3 pasará de tener 33.33% a 100% */
+                .column-3 {
+                    width: 50%;
+                }
+                /* column-4 pasará de tener 25% a 50% */
+                .column-4 {
+                    width: 50%;
+                }
+                #maps {
+                    width: 80%;
+                }
+                #video {
+                    width: 80%;
+                }
+                #maps1 {
+                    width: 80%;
+                }
+                #video1 {
+                    width: 80%;
+                }
+                #yo {
+                    font-size: 20px;
+                }
+                #yo1 {
+                    font-size: 20px;
+                }
+            }
